finished east-page2

--- a/faker_israel/salaries/east-page-2.jinja.html
+++ b/faker_israel/salaries/east-page-2.jinja.html
@@ -12,6 +12,9 @@
     .hidebg {
         background-color: white;
     }
+    .hidebg-gray {
+        background-color: lightgray
+    }
     .miriam {
         font-family: Miriam,serif;
         font-size: 47px;
@@ -23,5 +26,227 @@
 {% endblock %}
 {% block body %}
 <div class="david" style="background-image: url('east-page-2-empty.png'); width: 2480px; height: 3507px;">
+    <div id="company_name" class="hidebg" style="top: 186px; right: 95px; font-size: 54px; font-weight: 900; width: 800px; height: 40px;">מטריקס אי.טי מערכות מידע מתקדמ</div>
+
+    <style>
+        #nikuyey_hithayvut table { width: 100%; table-layout: fixed; }
+        #nikuyey_hithayvut td { font-size: 41px; }
+        #nikuyey_hithayvut tr { height: 41px; }
+        #nikuyey_hithayvut tr td:nth-child(1) { width: 80px; }
+        #nikuyey_hithayvut tr td:nth-child(2) { width: 298px; text-align: right; }
+        #nikuyey_hithayvut tr td:nth-child(3) { width: 145px; text-align: right; }
+        #nikuyey_hithayvut tr td:nth-child(4) { width: 125px; text-align: right; }
+        #nikuyey_hithayvut tr td:nth-child(5) { width: 170px; text-align: right; }
+        #nikuyey_hithayvut tr td:nth-child(6) { width: 210px; text-align: right; }
+        #nikuyey_hithayvut tr td:nth-child(7) { width: 210px; text-align: right; }
+        #nikuyey_hithayvut tr td:nth-child(8) { width: 210px; text-align: right; }
+        #nikuyey_hithayvut tr td:nth-child(9) { width: 100%; text-align: right; }
+
+    </style>
+    <div id="nikuyey_hithayvut" style="top: 514px; right: 91px; font-size: 41px; width: 1640px; height: 80px;">
+        <table>
+            <tbody>
+            {% for _ in range(2) %}
+            <tr>
+                <td>644</td>
+                <td>קו הבריאות</td>
+                <td>99.5</td>
+                <td>1/1/24</td>
+                <td>99</td>
+                <td>1000</td>
+                <td>1000</td>
+                <td>9999</td>
+                <td>9999</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <div id="total_nikuyey_hithayvut" class="hidebg" style="top: 607px; right: 1521px; font-size: 41px; width: 200px; height: 45px;">9998.23</div>
+
+    <style>
+        #agregate_data_kupot table { width: 100%; table-layout: fixed; }
+        #agregate_data_kupot td { font-size: 41px; }
+        #agregate_data_kupot tr { height: 41px; }
+        #agregate_data_kupot tr td:nth-child(1) { width: 400px; }
+        #agregate_data_kupot tr td:nth-child(2) { width: 310px; text-align: right; }
+        #agregate_data_kupot tr td:nth-child(3) { width: 310px; text-align: right; }
+        #agregate_data_kupot tr td:nth-child(4) { width: 310px; text-align: right; }
+        #agregate_data_kupot tr td:nth-child(5) { width: 100%; text-align: right; }
+    </style>
+
+    <div id="agregate_data_kupot" style="top: 862px; right: 91px; font-size: 41px; width: 1640px; height: 80px;">
+        <table>
+            <tbody>
+            <tr>
+                <td>קרן השתלמות</td>
+                <td>999999.99</td>
+                <td>99999.99</td>
+                <td>99999.99</td>
+                <td>12.25</td>
+            </tr>
+            <tr>
+                <td>תגמולים לקצבה</td>
+                <td>98</td>
+                <td>5215</td>
+                <td>564</td>
+                <td>10.25</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <style>
+        #missing table { width: 100%; table-layout: fixed; }
+        #missing td { font-size: 41px; }
+        #missing tr { height: 41px; }
+        #missing tr td:nth-child(1) { width: 190px; }
+        #missing tr td:nth-child(2) { width: 128px; text-align: right; }
+        #missing tr td:nth-child(3) { width: 145px; text-align: right; }
+        #missing tr td:nth-child(4) { width: 160px; text-align: right; }
+        #missing tr td:nth-child(5) { width: 150px; text-align: right; }
+        #missing tr td:nth-child(6) { width: 150px; text-align: right; }
+        #missing tr td:nth-child(7) { width: 150px; text-align: right; }
+        #missing tr td:nth-child(8) { width: 150px; text-align: right; }
+        #missing tr td:nth-child(9) { width: 100%; text-align: right; }
+    </style>
+
+    <div id="missing" style="top: 1143px; right: 91px; font-size: 41px; width: 1640px; height: 116px;">
+        <table>
+            <tbody>
+            <tr>
+                <td>חופשה בשעות</td>
+                <td>180.00</td>
+                <td>352.80</td>
+                <td>15.00</td>
+                <td>108</td>
+                <td>180.00</td>
+                <td>160.50</td>
+                <td>367.80</td>
+            </tr>
+            <tr>
+                <td>הבראה</td>
+                <td>10.00</td>
+                <td></td>
+                <td>84</td>
+                <td>84</td>
+                <td>85.33</td>
+                <td>85.33</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>מחלה בשעות</td>
+                <td>162.00</td>
+                <td>810.00</td>
+                <td></td>
+                <td></td>
+                <td>818.64</td>
+                <td>8.64</td>
+                <td>810.00</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="hidebg" style="top: 2314px; right: 85px; font-size: 41px; width: 500px; height: 130px;">פלוני אלמוני</div>
+    <div class="hidebg" style="top: 2515px; right: 85px; font-size: 41px; width: 500px; height: 147px;">פלוני אלמוני</div>
+    <div class="hidebg" style="top: 2728px; right: 85px; font-size: 41px; width: 500px; height: 130px;">פלוני אלמוני</div>
+    <div class="hidebg" style="top: 2942px; right: 85px; font-size: 41px; width: 500px; height: 135px;">פלוני אלמוני</div>
+
+    <div class="hidebg" style="top: 3100px; right: 655px; font-size: 41px; width: 260px; height: 46px;">הפניקס</div>
+    <div class="hidebg" style="top: 3178px; right: 96px; font-size: 41px; width: 500px; height: 42px;">username@example.com</div>
+
+    <style>
+        #shuma_approval table { width: 100%; table-layout: fixed; }
+        #shuma_approval td { font-size: 41px; }
+        #shuma_approval tr { height: 41px; }
+        #shuma_approval tr td:nth-child(1) { width: 145px; }
+        #shuma_approval tr td:nth-child(2) { width: 150px; text-align: right; }
+        #shuma_approval tr td:nth-child(3) { width: 100%; text-align: right; font-size: 35px; }
+    </style>
+
+    <div id="shuma_approval" class="hidebg" style="top: 1463px; right: 95px; font-size: 41px; width: 1630px; height: 38px;">
+        <table>
+            <tbody>
+            <tr>
+                <td>01/2011</td>
+                <td>12/2023</td>
+                <td>1 נקודות זיכוי למשפחה חד הורית/מזונות לילדים</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div style="top: 1685px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">התקופה בעדה בוצע ניתוח נוחכות: מ-01/03/24 עד 31/03/24</div>
+    <div style="top: 1725px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">בתקופה ניתוח הנוכחות נדרשו 21 ימי עבודה בהם 187.00 שעות תקן</div>
+    <div style="top: 1765px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">בתקופה ניתוח הנוכחות בוצעו בפועל 21 ימים ובהם 191.92 שעות</div>
+    <div style="top: 1805px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">ותק אצל המעסיק 10 שנים 10 חודשים</div>
+    <div style="top: 1846px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">שכר לקצבה 12345 שכר לביטוח אובדן כושר עבודה 1234</div>
+    <div style="top: 1887px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">שכר לקרן השתלמות 12345</div>
+    <div style="top: 1929px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">סך כל הניכויים 12345 ש"ח</div>
+    <div style="top: 1970px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">שכר מינימום: לחודש 5880.02 לשעה 31.61</div>
+
+    <div id="tlush_sahar" class="hidebg" style="top: 244px; right: 1771px; font-size: 50px; width: 350px; height: 47px">123</div>
+
+    <style>
+        #tax_units table { width: 100%; table-layout: fixed; }
+        #tax_units td { font-size: 41px; }
+        #tax_units tr { height: 41px; }
+        #tax_units tr td:nth-child(1) { width: 88px; }
+        #tax_units tr td:nth-child(2) { width: 88px; text-align: right; }
+        #tax_units tr td:nth-child(3) { width: 88px; text-align: right; }
+        #tax_units tr td:nth-child(4) { width: 88px; text-align: right; }
+        #tax_units tr td:nth-child(5) { width: 88px; text-align: right; }
+        #tax_units tr td:nth-child(6) { width: 88px; text-align: right; }
+        #tax_units tr td:nth-child(7) { width: 100%; text-align: right; }
+    </style>
+
+    <div id="tax_units" style="top: 452px; right: 1773px; font-size: 41px; width: 620px; height: 76px">
+        <table>
+            <tbody>
+            <tr>
+                <td class="hidebg">01</td>
+                <td class="hidebg">02</td>
+                <td class="hidebg">03</td>
+                <td class="hidebg">04</td>
+                <td class="hidebg">05</td>
+                <td class="hidebg">06</td>
+                <td class="hidebg">ס"ה</td>
+            </tr>
+            <tr>
+                <td class="hidebg-gray">25</td>
+                <td class="hidebg-gray">25</td>
+                <td class="hidebg-gray">25</td>
+                <td class="hidebg-gray">25</td>
+                <td class="hidebg-gray">25</td>
+                <td class="hidebg-gray">25</td>
+                <td class="hidebg-gray">100</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <style>
+        #nekudot_zikuy table { width: 100%; table-layout: fixed; }
+        #nekudot_zikuy td { font-size: 41px; }
+        #nekudot_zikuy tr { height: 41px; }
+        #nekudot_zikuy tr td:nth-child(1) { width: 427px; }
+        #nekudot_zikuy tr td:nth-child(2) { width: 100%; text-align: right; }
+    </style>
+
+    <div id="nekudot_zikuy" style="top: 670px; right: 1772px; width: 620px; height: 78px;">
+        <table>
+            <tbody>
+            <tr>
+                <td class="hidebg">תושב ישראל</td>
+                <td class="hidebg">2.25</td>
+            </tr>
+            <tr>
+                <td class="hidebg-gray">תושב ישראל</td>
+                <td class="hidebg-gray">2.25</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 {% endblock %}
