--- a/faker_israel/salaries/east-page-1.jinja.html
+++ b/faker_israel/salaries/east-page-1.jinja.html
@@ -151,8 +151,8 @@
         #nikuy_hafrasha_kupot_gemel tr td:nth-child(2) { width: 320px; text-align: right; }
         #nikuy_hafrasha_kupot_gemel tr td:nth-child(3) { width: 660px; text-align: right; }
         #nikuy_hafrasha_kupot_gemel tr td:nth-child(4) { width: 230px; text-align: right; direction: ltr; }
-        #nikuy_hafrasha_kupot_gemel tr td:nth-child(5) { width: 200px; text-align: right; right; direction: ltr; }
-        #nikuy_hafrasha_kupot_gemel tr td:nth-child(6) { width: 100%; text-align: right; right; direction: ltr; }
+        #nikuy_hafrasha_kupot_gemel tr td:nth-child(5) { width: 200px; text-align: right; direction: ltr; }
+        #nikuy_hafrasha_kupot_gemel tr td:nth-child(6) { width: 100%; text-align: right; direction: ltr; }
     </style>
 
     <div id="nikuy_hafrasha_kupot_gemel" style="top: 2774px; right: 91px; width: 1640px; height: 286px;">
