--- a/faker_israel/salaries/east-page-1.jinja.html
+++ b/faker_israel/salaries/east-page-1.jinja.html
@@ -32,72 +32,170 @@
         <span id="address_company">, אבא אבן 3 הרצליה 46120</span>
     </div>
     <div id="tik_nikuyim" class="hidebg" style="top: 233px; right: 358px; font-size: 54px; width: 230px; height: 54px;">943049882</div>
-    <div id="company_number" class="hidebg" style="top: 233px; right: 752px; font-size: 54px; width: 230px; height: 54px;">511171662</div>
+    <div id="company_number" class="hidebg" style="top: 233px;right: 608px;font-size: 54px;width: 770px;height: 54px;">חברה : 511171662</div>
     <div id="department" class="hidebg" style="top: 280px; right: 275px; font-size: 54px; width: 700px; height: 54px;">4015300 פיתוח ממשלה</div>
     <div id="tlush_date" class="hidebg" style="font-weight: 900; top: 327px; right: 481px; font-size: 54px; width: 500px; height: 54px;">אפריל 2024</div>
-    <div id="full_name" class="hidebg" style="top: 526px; right: 259px; font-size: 54px; width: 500px; height: 54px;">פלוני אלמוני</div>
-    <div id="address_person" class="hidebg" style="top: 580px; right: 239px; font-size: 54px; width: 500px; height: 54px;">שפרינצק 25</div>
-    <div id="city_zip" class="hidebg" style="top: 628px; right: 259px; font-size: 54px; width: 600px; height: 54px;">מודיעין-מכבים 7170143</div>
+    <div id="full_name" class="hidebg" style="top: 518px;right: 259px;font-size: 54px;width: 1250px;height: 54px;">פלוני אלמוני</div>
+    <div id="address_person" class="hidebg" style="top: 571px;right: 239px;font-size: 54px;width: 1200px;height: 54px;padding-right: 20px;">שפרינצק 25</div>
+    <div id="city_zip" class="hidebg" style="top: 621px;right: 259px;font-size: 54px;width: 1200px;height: 56px;">מודיעין-מכבים 7170143</div>
 
-    <div id="total_tashlumim" style="top: 304px; right: 2156px; font-size: 41px; width: 200px; height: 39px;">123</div>
-    <div id="nikuy_hova_tax" style="top: 350px; right: 2156px; font-size: 41px; width: 200px; height: 39px;">123</div>
-    <div id="kipot_gemel" style="top: 391px; right: 2156px; font-size: 41px; width: 200px; height: 39px;">123</div>
-    <div id="neto_salary" style="top: 432px; right: 2156px; font-size: 41px; width: 200px; height: 39px;">123</div>
-    <div id="nikuy_hithayvut" style="top: 473px; right: 2156px; font-size: 41px; width: 200px; height: 39px;">123</div>
-    <div id="neto_tashlum" style="top: 523px; right: 2156px; font-size: 41px; width: 200px; height: 39px;">123</div>
+    <div id="total_tashlumim" style="top: 304px; right: 2156px; font-size: 41px; width: 200px; height: 39px;">12345.99</div>
+    <div id="nikuy_hova_tax" style="top: 350px; right: 2156px; font-size: 41px; width: 200px; height: 39px;">12345.99</div>
+    <div id="kipot_gemel" style="top: 391px; right: 2156px; font-size: 41px; width: 200px; height: 39px;">12345.99</div>
+    <div id="neto_salary" style="top: 432px; right: 2156px; font-size: 41px; width: 200px; height: 39px;">12345.99</div>
+    <div id="nikuy_hithayvut" style="top: 473px; right: 2156px; font-size: 41px; width: 200px; height: 39px;">12345.99</div>
+    <div id="neto_tashlum" style="top: 523px; right: 2156px; font-size: 41px; width: 200px; height: 39px;">12345.99</div>
 
-    <div id="acount_number" class="hidebg" style="top: 738px; right: 1771px; font-size: 41px; width: 200px; height: 39px;">123456</div>
-    <div id="branch_number" class="hidebg" style="top: 738px; right: 2071px; font-size: 41px; width: 130px; height: 39px;">905</div>
-    <div id="bank_number" class="hidebg" style="top: 738px; right: 2235px; font-size: 41px; width: 150px; height: 39px;">10</div>
+    <div id="acount_number" class="hidebg" style="top: 737px;right: 1772px;font-size: 41px;width: 200px;height: 33px;">999999999</div>
+    <div id="branch_number" class="hidebg" style="top: 737px; right: 2071px; font-size: 41px; width: 130px; height: 33px;">9999</div>
+    <div id="bank_number" class="hidebg" style="top: 737px; right: 2235px; font-size: 41px; width: 150px; height: 33px;">999</div>
 
-    <div style="top: 1091px; right: 91px; font-size: 41px; font-weight: 900; width: 200px; height: 40px;">שכר עבודה</div>
-    <div id="semel_salary" style="top: 1130px; right: 91px; font-size: 41px; width: 200px; height: 40px;">001</div>
-    <div id="salary" style="top: 1130px; right: 170px; font-size: 41px; width: 200px; height: 40px;">שכר בסיס</div> <!-- not sure if should be changed -->
-    <div id="salary_kamut" style="top: 1130px; right: 1304px; font-size: 41px; width: 160px; height: 40px;">100.00</div>
-    <div id="salary_payment" style="top: 1130px; right: 1506px; font-size: 41px; width: 220px; height: 40px;">123456</div>
-    <div style="top: 1175px; right: 485px; font-size: 41px; font-weight: 900; width: 500px; height: 40px;">סה"כ שכר עבודה</div>
 
-    <div id="total_salary" style="top: 1175px; right: 1506px; font-size: 41px; font-weight: 900; width: 500px; height: 40px;">123456</div>
-    <div style="top: 1216px; right: 91px; font-size: 41px; font-weight: 900; width: 500px; height: 40px;">תשלומים בגין שעות נוספות ומאמץ מיוחד</div>
-    <div id="semel_extra_hours" style="top: 1260px; right: 91px; font-size: 41px; width: 120px; height: 40px;">114</div>
-    <div id="extra_hours" style="top: 1260px; right: 170px; font-size: 41px; width: 270px; height: 40px;">שע.נוספות 125%</div>
-    <div id="extra_hours_rate" style="top: 1260px; right: 995px; font-size: 41px; width: 270px; height: 40px;">12345</div>
-    <div id="extra_hours_percentage" style="top: 1260px; right: 1170px; font-size: 41px; width: 270px; height: 40px;">125</div>
-    <div id="extra_hours_kamut" style="top: 1260px; right: 1304px; font-size: 41px; width: 270px; height: 40px;">4.92</div>
-    <div id="extra_hours_payment" style="top: 1260px; right: 1506px; font-size: 41px; width: 270px; height: 40px;">4.92</div>
-    <div style="top: 1298px; right: 485px; font-size: 41px; font-weight: 900; width: 500px; height: 40px;">סה"כ תשלומים בגין שעות נוספות ומאמץ מיוחד</div>
-    <div style="top: 1337px; right: 91px; font-size: 41px; font-weight: 900; width: 500px; height: 40px;">תשלומים בגין הוצאות</div>
-    <div id="semel_first_expanses" style="top: 1380px; right: 91px; font-size: 41px; width: 120px; height: 40px;">113</div>
-    <div id="first_expanses" style="top: 1380px; right: 170px; font-size: 41px; width: 270px; height: 40px;">טלפון</div>
-    <div id="first_expanses_total" style="top: 1380px; right: 1506px; font-size: 41px; width: 270px; height: 40px;">12345</div>
-    <div id="semel_second_expanses" style="top: 1423px; right: 91px; font-size: 41px; width: 120px; height: 40px;">048</div>
-    <div id="second_expanses" style="top: 1423px; right: 170px; font-size: 41px; width: 270px; height: 40px;">הבראה</div>
-    <div id="second_expanses_total" style="top: 1423px; right: 1506px; font-size: 41px; width: 270px; height: 40px;">12345</div>
-    <div id="semel_third_expanses" style="top: 1464px; right: 91px; font-size: 41px; width: 120px; height: 40px;">051</div>
-    <div id="third_expanses" style="top: 1464px; right: 170px; font-size: 41px; width: 270px; height: 40px;">חוצה ישראל</div>
-    <div id="third_expanses_total" style="top: 1464px; right: 1506px; font-size: 41px; width: 270px; height: 40px;">12345</div>
-    <div style="top: 1508px; right: 485px; font-size: 41px; font-weight: 900; width: 500px; height: 40px;">סה"כ תשלומים בגין הוצאות</div>
-    <div style="top: 1508px; right: 1506px; font-size: 41px; width: 500px; height: 40px;">123456</div>
+    <style>
+        #perut_tashlumim_table table { width: 100%; table-layout: fixed; }
+        #perut_tashlumim_table td { font-size: 41px; text-align: right; }
+        #perut_tashlumim_table tr { height: 41px; }
+        #perut_tashlumim_table tr.pt div { font-weight: bold; }
+        #perut_tashlumim_table tr.pr td:nth-child(3) div { direction: ltr; text-align: right; }
+        #perut_tashlumim_table tr.pr td:nth-child(4) div { direction: ltr; text-align: right; }
+        #perut_tashlumim_table tr.pr td:nth-child(5) div { direction: ltr; text-align: right; }
+        #perut_tashlumim_table tr.pr td:nth-child(6) div { direction: ltr; text-align: right; }
+        #perut_tashlumim_table tr.pr td:nth-child(7) div { direction: ltr; text-align: right; }
+        #perut_tashlumim_table tr.ps td:nth-child(2) div { font-weight: bold; }
+        #perut_tashlumim_table tr.ps td:nth-child(3) div { direction: ltr; text-align: right; }
+    </style>
+    <div id="perut_tashlumim_table" style="top: 1082px;right: 85px;width: 1649px;height: 713px;">
+    <table>
+        <tbody>
+        <tr style="height: 9px;">
+            <td style="width: 85px;"></td>
+            <td style="width: 299px;"></td>
+            <td style="width: 263px;"></td>
+            <td style="width: 228px;"></td>
+            <td style="width: 201px;"></td>
+            <td style="width: 144px;"></td>
+            <td style="width: 198px;"></td>
+            <td style="width: 100%;"></td>
+        </tr>
+        <tr class="pt">
+            <td colspan="8"><div>שכר עבודה</div></td>
+        </tr>
+        <tr class="pr">
+            <td><div>001</div></td>
+            <td colspan="2"><div>שכר בסיס</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-999.99</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-99999.99</div></td>
+        </tr>
+        <tr class="ps">
+            <td colspan="2"><div></div></td>
+            <td colspan="5"><div>סה"כ שכר עבודה</div></td>
+            <td><div>-99999.99</div></td>
+        </tr>
+        <tr class="pt">
+            <td colspan="8"><div>תשלומים בגין שעות נוספות ומאמץ מיוחד</div></td>
+        </tr>
+        <tr class="pr">
+            <td><div>114</div></td>
+            <td colspan="2"><div>שע.נוספות 125%</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-999.99</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-99999.99</div></td>
+        </tr>
+        <tr class="ps">
+            <td colspan="2"><div></div></td>
+            <td colspan="5"><div>סה"כ תשלומים בגין שעות נוספות ומאמץ מיוחד</div></td>
+            <td><div>-99999.99</div></td>
+        </tr>
+        <tr class="pt">
+            <td colspan="8"><div>תשלומים בגין הוצאות</div></td>
+        </tr>
+        <tr class="pr">
+            <td><div>013</div></td>
+            <td colspan="2"><div>טלפון</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-999.99</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-99999.99</div></td>
+        </tr>
+        <tr class="pr">
+            <td><div>048</div></td>
+            <td colspan="2"><div>הבראה</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-999.99</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-99999.99</div></td>
+        </tr>
+        <tr class="pr">
+            <td><div>051</div></td>
+            <td colspan="2"><div>חוצה ישראל</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-999.99</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-99999.99</div></td>
+        </tr>
+        <tr class="ps">
+            <td colspan="2"><div></div></td>
+            <td colspan="5"><div>סה"כ תשלומים בגין הוצאות</div></td>
+            <td><div>-99999.99</div></td>
+        </tr>
+        <tr class="pt">
+            <td colspan="8"><div>תשלומים אחרים</div></td>
+        </tr>
+        <tr class="pr">
+            <td><div>122</div></td>
+            <td colspan="2"><div>תשל' מתנה מגולם</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-999.99</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-99999.99</div></td>
+        </tr>
+        <tr class="pr">
+            <td><div>170</div></td>
+            <td colspan="2"><div>מענק</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-999.99</div></td>
+            <td><div>-99999.99</div></td>
+            <td><div>-99999.99</div></td>
+        </tr>
+        <tr class="pr">
+            <td><div>210</div></td>
+            <td colspan="2"><div>נהג צעיר</div></td>
+            <td><div>07/25</div></td>
+            <td><div></div></td>
+            <td><div></div></td>
+            <td><div></div></td>
+            <td><div>-50.0</div></td>
+        </tr>
+        <tr class="pr">
+            <td><div>210</div></td>
+            <td colspan="2"><div>גילום תשלומי נט</div></td>
+            <td><div></div></td>
+            <td><div></div></td>
+            <td><div></div></td>
+            <td><div></div></td>
+            <td><div>398.00</div></td>
+        </tr>
+        <tr class="ps">
+            <td colspan="2"><div></div></td>
+            <td colspan="5"><div>סה"כ תשלומים אחרים</div></td>
+            <td><div>-99999.99</div></td>
+        </tr>
+        </tbody>
+    </table>
+    </div>
 
-    <div style="top: 1547px; right: 91px; font-size: 41px; font-weight: 900; width: 500px; height: 40px;">תשלומים אחרים</div>
-    <div id="semel_first_other_expanses" style="top: 1590px; right: 91px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="description_first_other_expanses" style="top: 1590px; right: 170px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="info_first_other_expanses" style="top: 1590px; right: 485px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="pay_sum_first_other_expanses" style="top: 1590px; right: 1325px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="semel_second_other_expanses" style="top: 1630px; right: 91px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="description_second_other_expanses" style="top: 1630px; right: 170px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="info_second_other_expanses" style="top: 1630px; right: 485px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="pay_sum_second_other_expanses" style="top: 1630px; right: 1325px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="semel_third_other_expanses" style="top: 1670px; right: 91px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="description_third_other_expanses" style="top: 1670px; right: 170px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="info_third_other_expanses" style="top: 1670px; right: 485px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="pay_sum_third_other_expanses" style="top: 1670px; right: 1325px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="semel_four_other_expanses" style="top: 1711px; right: 91px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="description_four_other_expanses" style="top: 1711px; right: 170px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="info_four_other_expanses" style="top: 1711px; right: 485px; font-size: 41px; width: 120px; height: 40px;">123</div>
-    <div id="pay_sum_four_other_expanses" style="top: 1711px; right: 1325px; font-size: 41px; width: 120px; height: 40px;">123</div>
 
-    <div style="top: 1756px; right: 485px; font-size: 41px; font-weight: 900; width: 500px; height: 40px;">סה"כ תשלומים אחרים</div>
+
     <div style="top: 1790px; right: 91px; font-size: 41px; font-weight: 900; width: 500px; height: 40px;">מידע נוסף</div>
     <div id="semel_work_hours" style="top: 1833px; right: 91px; font-size: 41px; width: 120px; height: 40px;">1436</div>
     <div id="work_hours" style="top: 1833px; right: 170px; font-size: 41px; width: 280px; height: 40px;">שעות עבודה</div>
@@ -112,16 +210,19 @@
     <div id="untitled_first" style="top: 2059px; right: 470px; font-size: 41px; width: 400px; height: 40px;">קבוע</div>
     <div id="kamut_first" style="top: 2059px; right: 1060px; font-size: 41px; width: 200px; height: 40px;">1.00</div>
     <div id="sum_tkina_first" style="top: 2059px; right: 1275px; font-size: 41px; width: 200px; height: 40px;">123456</div>
+    <div id="sum_gilum_first" style="top: 2059px;right: 1486px;font-size: 41px;width: 233px;height: 40px;direction: ltr; text-align: right;">-1234.56</div>
     <div id="semel_second" style="top: 2103px; right: 91px; font-size: 41px; width: 120px; height: 40px;">150</div>
     <div id="description_second" style="top: 2103px; right: 170px; font-size: 41px; width: 280px; height: 40px;">שווי רכב</div>
     <div id="untitled_second" style="top: 2103px; right: 470px; font-size: 41px; width: 400px; height: 40px;">קבוע</div>
     <div id="kamut_second" style="top: 2103px; right: 1060px; font-size: 41px; width: 200px; height: 40px;">1.00</div>
     <div id="sum_tkina_second" style="top: 2103px; right: 1275px; font-size: 41px; width: 200px; height: 40px;">123456</div>
+    <div id="sum_gilum_second" style="top: 2103px;right: 1486px;font-size: 41px;width: 233px;height: 40px;direction: ltr; text-align: right;">-1234.56</div>
     <div id="semel_third" style="top: 2142px; right: 91px; font-size: 41px; width: 120px; height: 40px;">150</div>
     <div id="description_third" style="top: 2142px; right: 170px; font-size: 41px; width: 280px; height: 40px;">שווי רכב</div>
     <div id="untitled_third" style="top: 2142px; right: 470px; font-size: 41px; width: 400px; height: 40px;">קבוע</div>
     <div id="kamut_third" style="top: 2142px; right: 1060px; font-size: 41px; width: 200px; height: 40px;">1.00</div>
     <div id="sum_tkina_third" style="top: 2142px; right: 1275px; font-size: 41px; width: 200px; height: 40px;">123456</div>
+    <div id="sum_gilum_third" style="top: 2142px;right: 1486px;font-size: 41px;width: 233px;height: 40px;direction: ltr; text-align: right;">-1234.56</div>
     <div style="top: 2188px; right: 485px; font-size: 41px; font-weight: 900; width: 500px; height: 40px;">סה"כ זקיפות שכר</div>
     <div id="total_sum_zkifut" style="top: 2188px; right: 1275px; font-size: 41px; width: 200px; height: 40px;">123456</div>
     <div id="total_sum_tashlumim" class="hidebg" style="top: 2241px; right: 1492px; font-size: 41px; width: 200px; height: 40px;">1234</div>
@@ -130,7 +231,7 @@
     <div id="markiv_sahar_total" class="hidebg" style="top: 1143px; right: 2219px; font-size: 41px; width: 160px; height: 40px">123</div>
 
     <div id="rate_description_first_line" class="hidebg" style="top: 1358px; right: 1772px; font-size: 41px; width: 200px; height: 40px;">משכורת</div>
-    <div id="rate_sum_first_line" class="hidebg" style="top: 1358px; right: 2212px; font-size: 41px; width: 170px; height: 40px;">123</div>
+    <div id="rate_sum_first_line" class="hidebg" style="top: 1358px; right: 2211px; font-size: 41px; width: 170px; height: 40px;">123</div>
     <div id="rate_description_second_line" class="hidebg-gray" style="top: 1400px; right: 1772px; font-size: 41px; width: 200px; height: 40px;">שעה</div>
     <div id="rate_sum_second_line" class="hidebg-gray" style="top: 1400px; right: 2212px; font-size: 41px; width: 170px; height: 40px;">123</div>
 
@@ -173,7 +274,7 @@
     </div>
 
     <div id="total_nikuy_hafrasha_maasik" class="hidebg" style="top: 3110px; right: 1357px; font-size: 41px; width: 150px; height: 50px;">123</div>
-    <div id="total_sum_nikuy" class="hidebg" style="top: 3110px; right: 1550px; font-size: 41px; width: 150px; height: 50px;">123</div>
+    <div id="total_sum_nikuy" class="hidebg" style="top: 3113px;right: 1549px;font-size: 41px;width: 150px;height: 45px;">123</div>
 
     <div style="top: 1573px; right: 1775px; font-size: 41px; font-weight: 900; width: 500px; height: 40px">נתונים אישיים</div>
 
