--- a/faker_israel/salaries/east-page-2.jinja.html
+++ b/faker_israel/salaries/east-page-2.jinja.html
@@ -177,14 +177,35 @@
         </table>
     </div>
 
-    <div style="top: 1685px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">התקופה בעדה בוצע ניתוח נוחכות: מ-01/03/24 עד 31/03/24</div>
-    <div style="top: 1725px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">בתקופה ניתוח הנוכחות נדרשו 21 ימי עבודה בהם 187.00 שעות תקן</div>
-    <div style="top: 1765px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">בתקופה ניתוח הנוכחות בוצעו בפועל 21 ימים ובהם 191.92 שעות</div>
-    <div style="top: 1805px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">ותק אצל המעסיק 10 שנים 10 חודשים</div>
-    <div style="top: 1846px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">שכר לקצבה 12345 שכר לביטוח אובדן כושר עבודה 1234</div>
-    <div style="top: 1887px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">שכר לקרן השתלמות 12345</div>
-    <div style="top: 1929px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">סך כל הניכויים 12345 ש"ח</div>
-    <div style="top: 1970px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">שכר מינימום: לחודש 5880.02 לשעה 31.61</div>
+    <div style="top: 1685px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">התקופה בעדה בוצע ניתוח נוכחות: מ-<span id="extra_details_date_from">01/03/24</span> עד <span id="extra_details_date_to">31/03/24</span></div>
+    <div style="top: 1725px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">בתקופה ניתוח הנוכחות נדרשו
+        <span id="extra_details_days_work">21</span>
+        ימי עבודה בהם
+        <span id="extra_details_hours_teken">187.00</span>
+        שעות תקן</div>
+    <div style="top: 1765px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">בתקופה ניתוח הנוכחות בוצעו בפועל
+        <span id="extra_details_days_actual">21</span>
+        ימים ובהם
+        <span id="extra_details_hours_actual">191.92</span>
+        שעות</div>
+    <div style="top: 1805px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">ותק אצל המעסיק
+        <span id="extra_details_vetek_years">10</span>
+        שנים
+        <span id="extra_details_vetek_months">10</span>
+        חודשים</div>
+    <div style="top: 1846px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">שכר לקצבה
+        <span id="extra_details_sahar_kizva">12345</span>
+        שכר לביטוח אובדן כושר עבודה
+        <span id="extra_details_sahar_ovdan_kosher">1234</span></div>
+    <div style="top: 1887px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">שכר לקרן השתלמות
+        <span id="extra_details_sahar_hishtalmut">12345</span></div>
+    <div style="top: 1929px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">סך כל הניכויים
+        <span id="extra_details_sah_kol_nikuim">12345</span>
+        ש"ח</div>
+    <div style="top: 1970px; right: 95px; font-size: 41px; width: 1630px; height: 40px;">שכר מינימום: לחודש
+        <span id="extra_details_minimum_month">5880.02</span>
+        לשעה
+        <span id="extra_details_minimum_hour">31.61</span></div>
 
     <div id="tlush_sahar" class="hidebg" style="top: 244px; right: 1771px; font-size: 50px; width: 350px; height: 47px">123</div>
 
